Fixed layout issues and added design from mockups

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,16 +1,17 @@
 body {
     width: 100%;
+    height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background:url(greyBack.png);
-    padding-top:50px;
-}
-.navbar-fixed-top{
-  border: none;
+    padding-top: 50px;
 }
 
+.navbar-default {
+    background-color: #f8f8f8;
+    border: transparent !important;
+}
 .navbar-default .container-fluid{
   background-color: #363a3c;
-  border: none;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form{
   background-color: #363a3c;
@@ -18,7 +19,7 @@ body {
 	background-image: none;
   height: 60px;
   padding-top: 5px;
-  border: none;
+  border: transparent;
 }
 
 .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
@@ -26,6 +27,14 @@ body {
   font-size: 25px;
   font-weight: bold;
 }
+.navbar-nav>li>a {
+  color: #5d6367;
+  font-weight: bold;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+      color: #8b9f23 !important;
+}
+
 
 #footer {
   height: 180px;
@@ -56,8 +65,8 @@ body {
 
 .Site-content {
   flex: 1;
-  margin-bottom: -10px;
 }
+
 
 /*Code for Sticky footer using Flexbox*/
 .line {
@@ -148,7 +157,7 @@ p {
     display: table;
     width: 100%;
     height: 100%;
-    padding: 200px 0;
+    padding: 200px 0px;
     text-align: center;
     color: #fff;
     background:url(splashphoto.jpeg) no-repeat bottom center scroll;
@@ -162,6 +171,7 @@ p {
 .splashbody {
     display: table-cell;
     vertical-align: middle;
+    padding-bottom: 30px;
 }
 
 .splashtitle {
